ayracı komple iptal et

--- a/themes/toha/layouts/partials/helpers/add-navbar-separator.html
+++ b/themes/toha/layouts/partials/helpers/add-navbar-separator.html
@@ -1,4 +1,4 @@
-{{ $addNavbarSeparator:= false }}
+<!-- {{ $addNavbarSeparator:= false }}
 
 {{/*  If "blog" feature is enabled, then add navbar separator  */}}
 {{ if site.Params.features.blog.enable }}
@@ -22,4 +22,4 @@
     {{ end }}
 {{ end }}
 
-{{ return $addNavbarSeparator }}
+{{ return $addNavbarSeparator }} -->
