--- a/themes/toha/layouts/index.html
+++ b/themes/toha/layouts/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language.Lang }}">
   <head>
+    <meta name="google-site-verification" content="9tpPmii2Cp0h8HCIr7yJEiPPnxhQQmUoKvxaN9lp1Rw" />
     <title>{{- .Site.Title -}}</title>
     {{ $siteDescription := .Site.Params.description }}
     {{ if (index .Site.Data .Site.Language.Lang).site }}
