--- a/themes/toha/layouts/index.html
+++ b/themes/toha/layouts/index.html
@@ -7,10 +7,10 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
+s
   gtag('config', 'G-STZXGV0BN2');
 </script>
-    <meta name="google-site-verification" content="9tpPmii2Cp0h8HCIr7yJEiPPnxhQQmUoKvxaN9lp1Rw" />
+    <meta name="google-site-verification" content="google900913e625a99b9b.html" />
     <title>{{- .Site.Title -}}</title>
     {{ $siteDescription := .Site.Params.description }}
     {{ if (index .Site.Data .Site.Language.Lang).site }}
