--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -26,7 +26,7 @@
     {{ $sections = (index site.Data site.Language.Lang).sections }}
   {{ end }}
 
-  {{ $copyrightNotice := "© 2021 Copyright."}}
+  {{ $copyrightNotice := "© 2025 Copyright."}}
   {{ if (index site.Data site.Language.Lang).site }}
     {{ $siteConfig := (index site.Data site.Language.Lang).site }}
     {{ if $siteConfig.copyright }}
@@ -143,7 +143,8 @@
     {{ if $credentialsEnabled }}
     <hr />
     <div class="container">
-      <div class="row text-left">
+      <div class="text-center">
+        <div class="col-md-4 text-center">{{ $copyrightNotice | markdownify }}</div>
       </div>
     </div>
     {{ end }}
