--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -134,6 +134,7 @@
         {{ end }}
       </div>
     </div>
+    {{ if $credentialsEnabled }}
     <hr />
     <div class="container">
       <div class="row justify-content-center">
