--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 {{ $footerEnabled      := site.Params.footer.enable             | default true }}
 {{ $navigationEnabled  := site.Params.footer.navigation.enable  | default true }}
 {{ $contactMeEnabled   := site.Params.footer.contactMe.enable   | default true }}
-{{ $newsletterEnabled  := site.Params.footer.newsletter.enable  | default true }}
+{{ $newsletterEnabled  := site.Params.footer.newsletter.enable  | default false }}
 {{ $credentialsEnabled := site.Params.footer.credentials.enable | default false }}
 {{ $disclaimerEnabled  := site.Params.footer.disclaimer.enable  | default false }}
 
