--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 {{ $navigationEnabled  := site.Params.footer.navigation.enable  | default true }}
 {{ $contactMeEnabled   := site.Params.footer.contactMe.enable   | default true }}
 {{ $newsletterEnabled  := site.Params.footer.newsletter.enable  | default true }}
-{{ $credentialsEnabled := site.Params.footer.credentials.enable | default true }}
+{{ $credentialsEnabled := site.Params.footer.credentials.enable | default false }}
 {{ $disclaimerEnabled  := site.Params.footer.disclaimer.enable  | default false }}
 
 {{/*  Keep backward compatibility for the newsletter function */}}
@@ -58,7 +58,82 @@
   {{ end }}
   {{ $hugoLogo = $hugoLogo.RelPermalink}}
 
-  <footer class="container-fluid text-center align-content-center footer pb-2">
+  <footer class="container-fluid text-center align-content-center footer pb-2">  
+    <div class="container pt-5">
+      <div class="row text-left">
+        {{ if $navigationEnabled }}
+        <div class="col-md-4 col-sm-12">
+          <h5>{{ i18n "navigation" }}</h5>
+          {{ if $sections }}
+          <ul>
+            {{- range sort $sections "section.weight" }}
+              {{ if and (.section.enable) (.section.showOnNavbar)}}
+                {{ $sectionID := replace (lower .section.name) " " "-"  }}
+                {{ if .section.id }}
+                  {{ $sectionID = .section.id }}
+                {{ end }}
+                <li class="nav-item">
+                  <a class="smooth-scroll" href="/#{{ $sectionID }}">{{ .section.name }}</a>
+                </li>
+              {{ end }}
+            {{- end }}
+          </ul>
+          {{ end }}
+        </div>
+        {{ end }}
+        {{ if (and $contactMeEnabled $author) }}
+        <div class="col-md-4 col-sm-12">
+          <h5>{{ i18n "contact_me" }}</h5>
+          <ul>
+            {{ range $key,$value:= $author.contactInfo }}
+            <li><span>{{ title $key }}: </span> <span>{{ $value }}</span></li>
+            {{ end }}
+          </ul>
+        </div>
+        {{ end }}
+        <!-------------- Newsletter --------------->
+        {{ if $newsletterEnabled }}
+          {{ $provider := site.Params.footer.newsletter.provider }}
+          <div class="col-md-4 col-sm-12">
+            <p>{{ i18n "newsletter_text" }}</p>
+            {{ if and (eq $provider "mailchimp") site.Params.footer.newsletter.mailchimpURL }}  <!-- mailchimp -->
+              <form
+                action="{{ site.Params.footer.newsletter.mailchimpURL }}"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate >
+                <div class="form-group">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="mce-EMAIL"
+                    name="EMAIL"
+                    aria-describedby="emailHelp"
+                    placeholder="{{ i18n "newsletter_input_placeholder" }}"
+                  />
+                  <small id="emailHelp" class="form-text text-muted"
+                    >{{ i18n "newsletter_warning" }}</small
+                  >
+                </div>
+                <button type="submit" class="btn btn-info">{{ i18n "submit" }}</button>
+              </form>
+            {{ else }}
+             <!-- a dummy form -->
+              <form>
+                <div class="form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="{{ i18n "newsletter_input_placeholder" }}"/>
+                  <small id="emailHelp" class="form-text text-muted">{{ i18n "newsletter_warning" }}</small>
+                </div>
+                <button type="submit" class="btn btn-info">{{ i18n "submit" }}</button>
+              </form>
+            {{ end }}
+          </div>
+        {{ end }}
+      </div>
+    </div>
     {{ if $credentialsEnabled }}
     <hr />
     <div class="container">
