--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -59,6 +59,40 @@
   {{ $hugoLogo = $hugoLogo.RelPermalink}}
 
   <footer class="container-fluid text-center align-content-center footer pb-2">
+    <div class="container pt-5">
+      <div class="row text-left">
+        {{ if $navigationEnabled }}
+        <div class="col-md-4 col-sm-12">
+          <h5>{{ i18n "navigation" }}</h5>
+          {{ if $sections }}
+          <ul>
+            {{- range sort $sections "section.weight" }}
+              {{ if and (.section.enable) (.section.showOnNavbar)}}
+                {{ $sectionID := replace (lower .section.name) " " "-"  }}
+                {{ if .section.id }}
+                  {{ $sectionID = .section.id }}
+                {{ end }}
+                <li class="nav-item">
+                  <a class="smooth-scroll" href="/#{{ $sectionID }}">{{ .section.name }}</a>
+                </li>
+              {{ end }}
+            {{- end }}
+          </ul>
+          {{ end }}
+        </div>
+        {{ end }}
+        {{ if (and $contactMeEnabled $author) }}
+        <div class="col-md-4 col-sm-12">
+          <h5>{{ i18n "contact_me" }}</h5>
+          <ul>
+            {{ range $key,$value:= $author.contactInfo }}
+            <li><span>{{ title $key }}: </span> <span>{{ $value }}</span></li>
+            {{ end }}
+          </ul>
+        </div>
+        {{ end }}
+      </div>
+    </div>
     {{ if $credentialsEnabled }}
     <hr />
     <div class="container">
